[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.2.1",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-groq>=0.3.8",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
]
